[gd_scene load_steps=4 format=3 uid="uid://cwojt257qqims"]

[ext_resource type="Script" uid="uid://dgyjnstdpfl84" path="res://scripts/draggables/wire_node.gd" id="1_sk0wb"]
[ext_resource type="AudioStream" uid="uid://co7isjcp6gu7x" path="res://assets/sounds/sfx/pickup.mp3" id="2_ck4ie"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00ly7"]
size = Vector2(4, 4)

[node name="Wire_Collision" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_sk0wb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_00ly7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ck4ie")
volume_db = -25.0
pitch_scale = 0.8

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ck4ie")
volume_db = -30.0
pitch_scale = 3.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
